# RandomUnitaryLayers

./: Cargo.toml  README.md
examples/: simple_example.rs
jupyter/: 2D-Results.ipynb  CheckGap.ipynb  CheckHaar.ipynb  CheckVolumeScaling.ipynb  Clumping.ipynb  DensityTests.ipynb  DoubleDefect.ipynb  GenericState-Copy1.ipynb  GenericState.ipynb  NonphysicalChain.ipynb  Occupation Diffusion.ipynb  SingleDefectScenarios.ipynb  Spin1Chain.ipynb  Test.ipynb  TestCalcs.ipynb  Untitled.ipynb  Untitled1.ipynb
jupyter/PaperData/: DephasedDimers.ipynb  DoubleDefectDephased.ipynb  DoubleTripleDefect.ipynb  HalfFilling.ipynb  MergeSingleDouble.ipynb  MergeSingleDoubleTriple.ipynb  MixedChargeImbalance.ipynb  MomentumModes.ipynb  NeelStateAndDensity.ipynb  NeelStateAndDensityVariance.ipynb  PaperPlots.ipynb  SingleDefect.ipynb  SubsytemPurity.ipynb  VariableFilling.ipynb
jupyter/PaperData/.ipynb_checkpoints/: SingleDefect-checkpoint.ipynb
jupyter/PaperData/dephased_states/: dephased_uniform_l=10.npz  dephased_uniform_l=12.npz  dephased_uniform_l=14.npz  dephased_uniform_l=16.npz
jupyter/PaperData/double_triple_filling/: 2_defects_deloc.npz  2_defects_left.npz
jupyter/PaperData/half_filling/: all_defects_intertwined.npz  all_defects_left.npz  knum_1.npz  knum_2.npz  knum_3.npz  knum_4.npz  knum_5.npz  occupation_imbalance_lessT_moreL.npz
jupyter/PaperData/half_purity/: subsystem_purity.npz
jupyter/PaperData/merge_single_double_filling/: adjusted_dimer_and_dephased.npz  dimer_and_dephased.npz  dimer_and_dephased_opp.npz  double_left.npz  double_sep.npz  single_left.npz  triple_scaling_10.npz  triple_scaling_15.npz  triple_scaling_20.npz  triple_scaling_25.npz  triple_scaling_30.npz  triple_scaling_35.npz  triple_scaling_40.npz  triple_scaling_45.npz  triple_scaling_5.npz  triple_scaling_50.npz
jupyter/check-volume-data/: mixtures_1.npz
src/: genericrandomcircuit.rs  lib.rs  multidefect.rs  singledefect.rs  utils.rs
(+12 files in other folders)
