[package]
name = "py_entropy"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_entropy"
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
num-complex = "^0.4"
rayon = "^1.5"
num-traits = "^0.2"

[dependencies.pyo3]
version = "^0.15"
features = ["extension-module"]

[dependencies.numpy]
version = "^0.15"

[dependencies.rand]
version = "^0.8"
features = ["small_rng"]