[package]
name = "py_entropy"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_entropy"
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["internaldof"]
internaldof = ["ndarray-linalg", "rand_distr"]

[dependencies]
num-complex = "^0.4"
rayon = ">=1.5"
num-traits = ">=0.2"
num-integer = ">=0.1"
smallvec = {version = ">=1.8", features = ["const_generics"]}

[dependencies.ndarray]
version = ">=0.15"
features = ["rayon"]

[dependencies.pyo3]
version = ">=0.16"
features = ["extension-module"]

[dependencies.numpy]
version = ">=0.16"

[dependencies.rand]
version = ">=0.8"
features = ["small_rng"]

[dependencies.rand_distr]
version = ">=0.4"
optional = true

[dependencies.ndarray-linalg]
version = ">=0.14"
features = ["openblas-system"]
optional = true